--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js",
+    "migrate-photos": "node migrate-photos.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
